--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.application.name=ms-deal
+spring.datasource.url=jdbc:postgresql://localhost:5432/forDealMS
+spring.datasource.username=postgres
+spring.datasource.password=7pxsjD
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+springdoc.swagger-ui.path=/swagger-ui.html
